# embedding-practise

./: .gitignore  README.md  docker-compose.yml  justfile
.docker/nginx/: nginx.conf
embedding-api/: Dockerfile  pyproject.toml
embedding-api/app/: main.py
embedding-api/app/routers/: __init__.py
embedding-api/migrations/: env.py  script.py.mako
