[project]
name = "embedding-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "requests>=2.33.1",
    "sqlmodel>=0.0.37",
]
